--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 <body>
     <main>
          <header>
-            <h1>\titulo do site</h1>
+            <h1>\site do DUDIzark </h1>
          </header>
          <article>
-          <h2>artigo 001</h2>
-          <p>texto artigo 001</p>
+          <h2>apresentacao </h2>
+          <p>Meu nome e Douglas mais conhecido pelo meu codinome DUDIzark </p>
          </article>
          <article>
-            <h2>artigo 002</h2>
-            <p>texto artigo 002</p>
+            <h2>redes sociais</h2>
+            <p>INSTAGRAM:@dudikkjkk
+                twitter:@DUDIzark
+            </p>
          </article>
      </main>
 </body>
