--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>titulo do site</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <main>
          <header>
-            <h1>\site do DUDIzark </h1>
+            <h1> site do DUDIzark </h1>
          </header>
          <article>
           <h2>apresentacao </h2>
