--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <main>
          <header>
-            <h1> site do DUDIzark </h1>
+            <h1> Site do DUDIzark </h1>
+            <h2> esse site e apenas para teste pois estou fazendo um curso de python </h2>
+            <hr>
          </header>
          <article>
           <h2>apresentacao </h2>
@@ -18,10 +20,14 @@
          </article>
          <article>
             <h2>redes sociais</h2>
-            <p>INSTAGRAM:@dudikkjkk
-                twitter:@DUDIzark
+            <p>INSTAGRAM:@dudikkjkk</p>
+            <hr>
+            <p>twitter:@DUDIzark </p>
+            <img src="i332959.jpeg" alt="">
             </p>
          </article>
      </main>
 </body>
 </html>
+
+
