--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>INSTAGRAM:@dudikkjkk</p>
             <hr>
             <p>twitter:@DUDIzark </p>
-            <img src="" aldownload.jpgt="">
+            <img src="download.jpg" ="">
             </p>
          </article>
      </main>
