caixa de texto de pergunta update

--- a/site/Mundo NaTech.html
+++ b/site/Mundo NaTech.html
@@ -9,7 +9,15 @@
     <link rel="icon"type="image/x-icon"href="../imagens/MT.jpg"> 
 </head>
 <body>
+  <div class="search-box">
+    <input type="text" class="search-txt" placeholder="pesquisar">
+    <a href="#" class="search-btn">
+      <img src="loupe.svg" alt="lupa">
+    
+    </a>
 
+
+  </div>
     <main>
          <header>
             
