--- a/site/Mundo NaTech.html
+++ b/site/Mundo NaTech.html
@@ -154,43 +154,58 @@
     </br>
         </header>
          <article>
-         </BR>
-
-            <BR>
               <section id="Contato">
-            <p>REDES SOCIAIS
-            </br>
-            <BR>
-              <a href="https://www.instagram.com/dudikkjkk/">
+                <div class="CONTATOS BOTAO">
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <center>
+                  <hr width="50px" height="100px">
+                  </center>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+
+
+  <center>
+            <a href="https://www.instagram.com/dudikkjkk/">
+              <button>
+                <img src="../imagens/instagram (1).png" alt="Image"width="25px">
+              </button>
+            <a href="https://twitter.com/DUDIzark/">
+              <button>
+                <img src="../imagens/icons8-twitter-30.png" alt="Image"width="25px">
+              </button>
+            <a href="https://github.com/DUDIzark">
+              <button>
+                <img src="../imagens/icons8-github-30.png" alt="Image"width="25px">
+              </button>
+              <a href="https://www.linkedin.com/in/douglas-rodrigues-05071022a/">
                 <button>
-                  <img src="../imagens/instagram (1).png" alt="Image">
+                  <img src="../imagens/icons8-linkedin-30.png" alt="Image" width="25px">
                 </button>
-          </br>
-          <BR>
-            <p><a href="https://twitter.com/DUDIzark"> </a></p>
-            <button>
-            <img src="../imagens/icons8-twitter-30.png" alt="Image">
-            </button>
-          </br>
-          <BR>
-            <p><a href="https://github.com/DUDIzark"></a></p>
-            <button>
-              <img src="../imagens/icons8-github-30.png" alt="Image">
-            </button>
-          </br>
-          <BR>
-            <p><a href="https://www.linkedin.com/in/douglas-rodrigues-05071022a/">ENTRE EM CONTATO COMIGO PELO linkedin </a></p>
-          </br>
-          <BR>
-        
-          <small>&copy; DUDIzark</small>
+
+
+
+ 
             </p>
          </article>
+         
          <script src="app.js"></script>
         </div>
-     </main>
+      </div>
+ 
 </body>
-<main></main>
+<small>&copy; DUDIzark </small>
 </html>
-
+</center>
 
